NOREF: Add user email repo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
                 </ul>
             </div>
         </li>
+        <li>
+            <div>
+                <p class="subject">Java:</p>
+                <ul>
+                    <li><a href="https://github.com/hakunamatata0606/user_email">User creation service with sending verification link to email</a></li>
+                </ul>
+            </div>
+        </li>
     </ul>
 </body>
 </html>
